--- a/belajar-html/final-project/cv-rifai/index.html
+++ b/belajar-html/final-project/cv-rifai/index.html
@@ -12,6 +12,53 @@
     <title>Muhamad Rifai</title>
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <div class="header" id="header">
+    </div>
+    <!-- MAIN -->
+   <main class="main">
+
+<!-- HOME -->
+<section class="home section" id="home">
+
+</section>
+
+<!-- ABOUT -->
+<section class="about section" id="about">
+
+</section>
+
+<!-- SERVICE -->
+<section class="service section">
+
+</section>
+
+<!-- PROJECT -->
+<section class="project section" id="project">
+
+</section>
+
+<!-- CONTACT -->
+<section class="contact section" id="contact">
+
+</section>
+   </main>
+
+<!-- FOOTER -->
+<footer class="footer">
+
+</footer>
+
+<!-- SCROOL UP -->
+
+
+<!--SCROOL REVERAL  -->
+<script src="assets/js/scrollreveal.min.js"></script>
+
+<!-- EMAIL JS -->
+
+
+<!-- MAIN JS -->
+<script src="assets/js/main.js"></script>
 </body>
 </html>
