--- a/belajar-html/final-project/cv-rifai/index.html
+++ b/belajar-html/final-project/cv-rifai/index.html
@@ -14,6 +14,47 @@
 <body>
     <!-- HEADER -->
     <div class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">
+                <span class="nav__logo-circle">R</span>
+                <span class="nav__logo-name">Rifai</span>
+            </a>
+
+            <div class="nav__menu" id="nav-menu">
+                <span class="nav__title">Menu</span>
+
+                <h3 class="nav__name">Muhamad Rifai</h3>
+
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#Home" class="nav__link">Home</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#About" class="nav__link">About Me</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#Project" class="nav__link">Project</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#Contact" class="nav__link">Contact Me</a>
+                    </li>
+                </ul>
+
+                <!-- Close Button -->
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-line"></i>
+                </div>
+            </div>
+
+            <div class="nav__buttons">
+                <!-- Toggle Buttons -->
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="ri-menu-line"></i>
+                </div>
+            </div>
+        </nav>
     </div>
     <!-- MAIN -->
    <main class="main">
