main.js and html main-home

--- a/belajar-html/final-project/cv-rifai/index.html
+++ b/belajar-html/final-project/cv-rifai/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
     <!-- REMIXICONS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.4.0/remixicon.css" crossorigin="" />
     <!-- CSS STYLE -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Muhamad Rifai</title>
 </head>
+
 <body>
     <!-- HEADER -->
     <div class="header" id="header">
@@ -27,18 +29,18 @@
 
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#Home" class="nav__link">Home</a>
+                        <a href="#home" class="nav__link">Home</a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="#About" class="nav__link">About Me</a>
+                        <a href="#about" class="nav__link">About Me</a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="#Project" class="nav__link">Project</a>
+                        <a href="#project" class="nav__link">Project</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#Contact" class="nav__link">Contact Me</a>
+                        <a href="#contact" class="nav__link">Contact Me</a>
                     </li>
                 </ul>
 
@@ -57,49 +59,52 @@
         </nav>
     </div>
     <!-- MAIN -->
-   <main class="main">
+    <main class="main">
+        <!-- HOME -->
+        <section class="home section" id="home">
+            <div class="home__container container grid">
+                <h1 class="home__name">Muhamad Rifai</h1>
 
-<!-- HOME -->
-<section class="home section" id="home">
+                <div class="home__profile">
+                    <div class="home__image">
+                        <img src="./assets/img/rifai.png" alt="image" class="home__img" />
+                        <div class="home__shadow"></div>
+                        <img src="./assets/img/curved-arrow.svg" alt="image" class="home__arrow" />
+                        <img src="./assets/img/random-lines.svg" alt="image" class="home__line" />
 
-</section>
+                        <div class="geometric-box"></div>
+                    </div>
+                </div>
 
-<!-- ABOUT -->
-<section class="about section" id="about">
+                <div class="home__info"></div>
+            </div>
+        </section>
 
-</section>
+        <!-- ABOUT -->
+        <section class="about section" id="about"></section>
 
-<!-- SERVICE -->
-<section class="service section">
+        <!-- SERVICE -->
+        <section class="service section"></section>
 
-</section>
+        <!-- PROJECT -->
+        <section class="project section" id="project"></section>
 
-<!-- PROJECT -->
-<section class="project section" id="project">
+        <!-- CONTACT -->
+        <section class="contact section" id="contact"></section>
+    </main>
 
-</section>
+    <!-- FOOTER -->
+    <footer class="footer"></footer>
 
-<!-- CONTACT -->
-<section class="contact section" id="contact">
+    <!-- SCROOL UP -->
 
-</section>
-   </main>
+    <!--SCROOL REVERAL  -->
+    <script src="assets/js/scrollreveal.min.js"></script>
 
-<!-- FOOTER -->
-<footer class="footer">
+    <!-- EMAIL JS -->
 
-</footer>
-
-<!-- SCROOL UP -->
-
-
-<!--SCROOL REVERAL  -->
-<script src="assets/js/scrollreveal.min.js"></script>
-
-<!-- EMAIL JS -->
-
-
-<!-- MAIN JS -->
-<script src="assets/js/main.js"></script>
+    <!-- MAIN JS -->
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
