--- a/belajar-html/final-project/cv-rifai/index.html
+++ b/belajar-html/final-project/cv-rifai/index.html
@@ -74,9 +74,34 @@
 
                         <div class="geometric-box"></div>
                     </div>
-                </div>
+                    <div class="home__social">
+                        <a href="https://www.linkedin.com/in/muhrifai23/" target="_blank" class="home__social-link">
+                            <i class="ri-linkedin-box-fill"></i>
+                        </a>
 
-                <div class="home__info"></div>
+                        <a href="https://github.com/MuhDRifai" target="_blank" class="home__social-link">
+                            <i class="ri-github-fill"></i>
+                        </a>
+
+                        <a href="https://www.instagram.com/donquixote_rosinante23/?hl=id" target="_blank" class="home__social-link">
+                            <i class="ri-instagram-line"></i>
+                        </a>
+
+                    </div>
+                </div>
+                <div class="home__info">
+                    <p class="home__description">
+                        <b>As a Full-Stack Web Developer</b>, I have expertise in JavaScript, ExpressJS, MySQL, NodeJS, ReactJS. I have strong experience in developing both frontend and backend applications. Additionally, my team project experience during my Bootcamp has developed my teamwork skills. I am committed to continuing my growth and learning in the field of web development.
+                    </p>
+
+                    <a href="#about" class="home__scroll">
+                        <div class="home__scroll-box">
+                            <i class="ri-arrow-down-s-line"></i>
+                        </div>
+
+                        <span class="home__scroll-text">Scroll Down</span>
+                    </a>
+                </div>
             </div>
         </section>
 
