--- a/belajar-html/final-project/cv-rifai/index.html
+++ b/belajar-html/final-project/cv-rifai/index.html
@@ -42,6 +42,10 @@
                     <li class="nav__item">
                         <a href="#contact" class="nav__link">Contact Me</a>
                     </li>
+
+                    <li class="nav__item">
+                        <a href="./cv/CV_MuhamadRifai.pdf" class="nav__link">CV</a>
+                    </li>
                 </ul>
 
                 <!-- Close Button -->
@@ -67,7 +71,7 @@
 
                 <div class="home__profile">
                     <div class="home__image">
-                        <img src="./assets/img/rifai.png" alt="image" class="home__img" />
+                        <img src="./assets/img/rifai.jpg" alt="image" class="home__img" />
                         <div class="home__shadow"></div>
                         <img src="./assets/img/curved-arrow.svg" alt="image" class="home__arrow" />
                         <img src="./assets/img/random-lines.svg" alt="image" class="home__line" />
@@ -91,8 +95,8 @@
                 </div>
                 <div class="home__info">
                     <p class="home__description">
-                        <b>As a Full-Stack Web Developer</b>, I have expertise in JavaScript, ExpressJS, MySQL, NodeJS, ReactJS. I have strong experience in developing both frontend and backend applications. Additionally, my team project experience during my Bootcamp has developed my teamwork skills. I am committed to continuing my growth and learning in the field of web development.
-                    </p>
+                        <b>Full-Stack Web Developer</b> with expertise in JavaScript, ExpressJS, MySQL, NodeJS, and ReactJS. I have strong experience in developing both frontend and backend applications. Additionally, my team project experience during my Bootcamp has enhanced my teamwork skills. I am committed to continuing my growth and learning in the field of web development.
+                    </p>                    
 
                     <a href="#about" class="home__scroll">
                         <div class="home__scroll-box">
