--- a/belajar-html/final-project/cv-rifai/index.html
+++ b/belajar-html/final-project/cv-rifai/index.html
@@ -95,7 +95,7 @@
                 </div>
                 <div class="home__info">
                     <p class="home__description">
-                        <b>Full-Stack Web Developer</b> with expertise in JavaScript, ExpressJS, MySQL, NodeJS, and ReactJS. I have strong experience in developing both frontend and backend applications. Additionally, my team project experience during my Bootcamp has enhanced my teamwork skills. I am committed to continuing my growth and learning in the field of web development.
+                        <b>Full-Stack Web Developer</b>, As a Full-Stack Web Developer, I possess expertise in JavaScript, ExpressJS, MySQL, NodeJS, and ReactJS. I have experience in developing both frontend and backend applications. Additionally, collaborative project experiences with a team during the Bootcamp have enhanced my teamwork skills.
                     </p>                    
 
                     <a href="#about" class="home__scroll">
@@ -111,6 +111,24 @@
 
         <!-- ABOUT -->
         <section class="about section" id="about"></section>
+        <div class="about__container container grid">
+            <h2 class="section__title-1">
+                About Me
+            </h2>
+
+            <div class="about__profile">
+                <div class="about__image">
+                    <img src="/assets/img/rifai.jpg" alt="image" class="about__img">
+
+                    <div class="about__shadow"></div>
+
+                    <div class="geometric-box"></div>
+
+                    <img src="/assets/img/random-lines.svg" alt="" class="about__line">
+                    <div class="about__box"></div>
+                </div>
+            </div>
+        </div>
 
         <!-- SERVICE -->
         <section class="service section"></section>
