--- a/belajar-html/final-project/cv-rifai/index.html
+++ b/belajar-html/final-project/cv-rifai/index.html
@@ -142,7 +142,7 @@
       <!-- ABOUT -->
       <section class="about section" id="about">
         <div class="about__container container grid">
-            <h2 class="section__title-1">About Me</h2>
+            <h2 class="section__title-1"><span>About Me</span></h2>
     
             <div class="about__profile">
               <div class="about__image">
@@ -192,7 +192,46 @@
       </section>
       
       <!-- SERVICE -->
-      <section class="service section"></section>
+      <section class="service section">
+        <h2 class="section__title-2">
+          <span>Services</span>
+        </h2>
+
+        <div class="services__container container-grid">
+          <aricle class="services__card">
+            <div class="services__border"></div>
+
+            <div class="services__content">
+              <div class="services__icon">
+                <div class="services__box"></div>
+                <i class="ri-layout-4-line"></i>
+              </div>
+
+              <h2 class="services__title">Front End</h2>
+
+              <p class="services__description">Implementing interactive and visually appealing UI/UX design in accordance with provided instructions, ensuring the website aligns with the desired mockup specified by the client.</p>
+
+            </div>
+          </aricle>
+
+          <aricle class="services__card">
+            <div class="services__border"></div>
+
+            <div class="services__content">
+              <div class="services__icon">
+                <div class="services__box"></div>
+                <i class="ri-code-box-line"></i>
+              </div>
+
+              <h2 class="services__title">Back End</h2>
+
+              <p class="services__description">Developing core functionalities of the application, managing database operations, and implementing the logic and processes that occur behind the scenes, while ensuring that the application or website runs efficiently, reliably, and meets the desired functional requirements.</p>
+
+            </div>
+          </aricle>
+        </div>
+
+      </section>
 
       <!-- PROJECT -->
       <section class="project section" id="project"></section>
